hard-gists/1183842/run.log
=== Docker Run Log for 1183842 ===
Started at: Mi 29. Okt 11:57:49 CET 2025

[2025-10-29 11:57:49] START: Running container for 1183842
[2025-10-29 11:57:49] SUCCESS: Container 6264e62dd22ad67657c576df4dae284365c79627ba008f69e16219efd9de43e5 started for 1183842
=== Container logs for 1183842 ===
  File "/snippet.py", line 23
    print destination
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1183842 ===
[2025-10-29 11:57:51] INFO: Container 6264e62dd22ad67657c576df4dae284365c79627ba008f69e16219efd9de43e5 has stopped
